<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.HomeActivity">

<ImageView
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="0dp"
    android:scaleType="centerCrop"
    android:src="@drawable/header"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<!-- Titulo -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="58dp"
    android:text="@string/title_utils"
    android:textAllCaps="true"
    android:textColor="@android:color/black"
    android:textSize="70sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/btn_imc"
    android:layout_width="306dp"
    android:layout_height="@dimen/btn_hight"
    android:layout_marginTop="260dp"
    android:background="@drawable/button_bg"
    android:text="@string/title_imc"
    android:textColor="@android:color/white"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/btn_crono"
    android:layout_width="306dp"
    android:layout_height="@dimen/btn_hight"
    android:layout_marginTop="88dp"
    android:background="@drawable/button_bg"
    android:text="@string/title_crono"
    android:textColor="@android:color/white"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_imc" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/title_volmir"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_crono" />

</androidx.constraintlayout.widget.ConstraintLayout>